# plateforme

./: .coderabbit.yaml  .dockerignore  .env.back  .gitignore  .gitlab-ci-optimization-plan.txt  .gitlab-ci.yml  .gitleaks.toml  .markdownlint-cli2.yaml  .releaserc.json  404.html  CHANGELOG.md  CHANGELOG_SOFT_DELETE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TEST.md  ISSUE_SYNCHRONIZER_SOFT_DELETE.md  README.md  TESTS_COMPLETED.txt  TEST_REPORT.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  generate-certs.sh  keycloak-realm.json  lint-staged.config.cjs  lint-staged.config.js  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  seed.sql  signal-2026-01-22-205633.txt  sitemap.xml  turbo.json
apps/metric_exporter/: .envrc.example  Cargo.toml
apps/worker-compute-instance/: Cargo.toml
control-plane-rs/controlplane/: Cargo.toml  build.rs
control-plane-rs/hypervisor_connector/: Cargo.toml
controlplane/: .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.authz-worker  Dockerfile.docs  Dockerfile.synchronizer  README.md  schema.hcl
controlplane/.cargo/: config.toml
controlplane/.sqlx/: query-00468e11768beb020132be7d88949c5798ec5ea6c7fbc21eb1de98ba632fae55.json  query-03c7d974fa2f90d6e41968757c241e1b73a7c375aa9fdd9c61f5ac71d651f812.json  query-06dae50e2f79f761540007449eb52edfc51b5256a28dab95f9c1863a6dbdd720.json  query-0d67a4bfc23a12ca2e65bd37d414517466a478f954ac9a640a71787f062ad607.json  query-0dcfa71777ce27ee7a7279696048f23133e11ef5b0816748911d7f087f9270a7.json  query-0e7f4c3a83cc913a28cf99593df60789c0c37fea9798caa793bd03ca4042cffd.json  query-0f5bb0a3e23d0ec596dce464e62abf338d49ece4aa33cc22318aaa820cd8fd37.json  query-13aac9376964133613fde0d8429c3b22181e83992a8408274e30209230b2ceb4.json  query-167bfb4ff80330982d630268a09f3f01d98305706042544e2c76c0d69f287e71.json  query-177a3eff2a2789b77f296a223e89cbca31e5c6ebd7790d322d9201caea86ff20.json  query-17d0af3e0794c6a017a6f35d5b2581f9b29ebeb9978aafd930c82ab8ed5ee0b9.json  query-1ae0f0731ecd3542a568e3cd56e2fc3092b3826e1983770510ec0464079b81a2.json  query-1b26202b56bd6e6c141ebbe6cb25423fa7f54f0f4e95aec6a0a61b2051240d5c.json  query-1e983d04df879518214b917cc8b729552b94c4a0d68d4fcf92982621024d408e.json  query-1eaee6c3a6bc836b972483e35f162c43b877aa73084a4af9401932aa8f647132.json  query-1f894ddf9272630488f6ae7b7d506b12246fd5892f7210810531c43398221608.json  query-21672191647f6681c1f023951615abd3ebc9718a0651d6ae69de4d81a518e234.json  query-2804cc25aac9b9e33637bc8cb0868a6311790803d955f4de413961d33fff2bec.json  query-29fa00036120fcbcda91fdb9c0b4b55cd6ea3d0aa5f35d8f0390000a564f6cd0.json  query-2b1b34b7068d4e0d1f32bf2d3fc12e5fab6110354e638ea578afafcb3f04125d.json  query-2b3cf103e86c287e5cca2a517ac16f3642f013b5f0888732f1f984737ea3275b.json  query-2e1584e43863be01a82166c63a4d4fd600a42b02ca9eed87357336e8e177c24c.json  query-2fd9e708ae1ffd1fdd267670f56144a2c68763d7545a4ac5c13f51dcbc482aa4.json  query-3018c29891c6ba4b76ecc6602bf917d2ed9e076cd59a3224e9ca7d099b0de658.json  query-31d3d75734b119571ab67a4ed5f3b438a62c21b94726defe0caa056ac3d315d0.json  query-32d0b7d771d9de7c734c348367fe9b167246fdb54133e40c89e314a207931538.json  query-36232867ccb0d58ea3fb31dd8ec17624c570a1fb08db3d22bc159e67ad33de97.json  query-3675c764636c2535fc08367d36809b39b3fecfc62865ac50b3f76f3d8d536b56.json  query-3697763f9672df0b7b9daf1cd1f331af49f88bdfd0a478bd158f907e9df9a021.json  query-37143b450c82f2a14fb2b38038f899d7533b6bc58b8749827282ab2750d2eb2a.json  query-37e15dfdf2c26b90a02333f61977bb997e4f156edd0ed7ba8bcb106c1c0375c6.json  query-3813969d6d74eff618855cfca9e668a49a45ccc4a41724df3dde0db31d47344c.json  query-3885d741af4c057647718bf4b693278adc54989bfbe753416d19a958dda7f248.json  query-394e8ee86bbea946f8ed1ed7b39dd92012f0de00492946f461ff41aa1e984e82.json  query-399487ed7e377476cb9d788f9a739934b8ea3ada247015f44d6830a941a5b36d.json  query-3a7545ba9fd0fc1b71fe19180b6c35562e13c85d5bdc39114448a43610cba891.json  query-3d172ba6731487acb8c7a543cecdd7bc30ec1ae9a0f642161aa7f6465b966fbb.json  query-3e8379865e6e793004757df69eb7b6c667eb3b59f80951f013cba4a72cdae5f4.json  query-406260d55fc62d05ba16e74f7a8797cb410424d27eb8c34a2baba3894aa897fd.json  query-406b8560297ef1cb1b3b4e4c21a16fc121e2ec3ac95b897d38bc6c0c81d1f001.json  (+97 more)
controlplane/auth/: Cargo.toml
controlplane/authz-worker/: Cargo.toml
controlplane/controlplane/: Cargo.toml
controlplane/database/: Cargo.toml
controlplane/database-core/: Cargo.toml
controlplane/derive-auth/: Cargo.toml
controlplane/derive_factory/: Cargo.toml
controlplane/derive_repository/: Cargo.toml
controlplane/factory/: Cargo.toml
controlplane/frn-core/: Cargo.toml
controlplane/frn-derive/: Cargo.toml
controlplane/frn-rpc/: Cargo.toml  build.rs  compute.proto  iam.proto  longrunning.proto  network.proto  operations.proto  resourcemanager.proto  resources.proto
controlplane/hoop/: Cargo.toml
controlplane/hypervisor/: Cargo.toml  hypervisors.proto
controlplane/hypervisor_connector/: Cargo.toml
controlplane/hypervisor_connector_proxmox/: Cargo.toml
controlplane/hypervisor_connector_resolver/: Cargo.toml
controlplane/hypervisors/: Cargo.toml  build.rs  hypervisors.proto
controlplane/iam/: Cargo.toml  INTEGRATION.md  README.md  build.rs
controlplane/infrastructure/: Cargo.toml  build.rs  infrastructure.proto
controlplane/instance/: Cargo.toml  build.rs  instances.proto  problem.proto
controlplane/instances/: Cargo.toml  annotations.proto  build.rs  client.proto  extended_operations.proto  field_behavior.proto  http.proto  instances.proto  launch_stage.proto  myservice.protoset  resource.proto
controlplane/migrations/: 0001_create_schema.sql  0002_update_instances_add_cpu_memory_columns.sql  0003_create_resources_tables.sql  0004_update_hypervisors_add_organization_id_column.sql  0005_update_instances_add_missing_columns.sql  0006_create_zero_trust_networks_table.sql  0007_update_instances_add_zero_trust_network_id_column.sql  0008_create_datacenters_table.sql  0009_update_hypervisors_table_add_constraint_datacenter_id_non_nullable.sql  atlas.sum  (+27 more)
(+1500 files in other folders)
