[workspace]

members = [
  "auth",
  "authz-worker",
  "frn-core",
  "frn-derive",
  "frn-rpc",
  "database",
  "database-core",
  "derive-auth",
  "derive_factory",
  "derive_repository",
  "hoop",
  "infrastructure",
  "mock_server",
  "operations-worker",
  "pangolin",
  "server",
  "spicedb",
  "synchronizer",
]

resolver = "3"

[workspace.dependencies]
fabrique = "0.1.1"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
