[workspace]

members = [
  "auth",
  "frn-core",
  "frn-derive",
  "frn-rpc",
  "database",
  "database-core",
  "derive-auth",
  "derive_factory",
  "derive_repository",
  "infrastructure",
  "mock_server",
  "server",
  "spicedb",
  "synchronizer",
  "hoop", "operation-worker",
]

resolver = "3"

[workspace.dependencies]
fabrique = "0.2"
fake = { version = "4", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0-alpha.1", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }
