
[package]
name = "worker_compute_instance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1", features = ["full"] }
log = "0.4.22"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "macros", "uuid", "chrono", "derive", "json" ] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
prost = "0.11"
snap = "1.0"
clap = { version = "4.5.21", features = ["derive", "env", "cargo", "wrap_help"] }
strum = { version = "0.26.3", features = ["derive"] }