[package]
name = "controlplane"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
hypervisor = { path = "../hypervisor" }
proto = { path = "../proto" }
proxmox = { path = "../proxmox" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12"

[dev-dependencies]
proxmox = { path = "../proxmox", features = ["mock"] }
