[package]
name = "hypervisor_connector"
version = "0.1.0"
edition = "2024"

[dependencies]
mockito = "1.6.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.12" }
tokio = { version = "1", features = ["full"] }
