[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[features]
mock = ["dep:mockito", "dep:mock_server", "dep:serde_json"]

[dependencies]
futures = "0.3"
http = "1"
http-body = "1"
hyper = "1"
jsonwebtoken = "9"
moka = { version = "0.12", features = ["future"] }
mockito = { version = "1.6.0", optional = true }
mock_server = { path = "../mock_server", optional = true }
reqwest = "0.12"
serde = "1"
serde_json = { version = "*", optional = true }
thiserror = "2"
tokio = "1"
tonic = "0.14"
tower = "0.5"
