[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[features]
mock = ["dep:mockito", "dep:mock_server", "dep:serde_json"]

[dependencies]
database = { path = "../database" }
derive_factory = { path = "../derive_factory" }
derive_repository = { path = "../derive_repository" }
futures = "0.3"
http = "1"
http-body = "1"
hyper = "1"
jsonwebtoken = "9"
moka = { version = "0.12", features = ["future"] }
mockito = { version = "1.6.0", optional = true }
mock_server = { path = "../mock_server", optional = true }
resources = { path = "../resources" }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = { version = "*", optional = true }
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2"
tokio = "1"
tonic = "0.14"
tower = "0.5"
uuid = "1"
