[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[features]
mock = [
  "dep:base64",
  "dep:mockito",
  "dep:mock_server",
  "dep:rand",
  "dep:rsa",
  "dep:serde_json",
  "spicedb/mock",
]

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde"] }
derive-auth = { path = "../derive-auth" }
database = { path = "../database" }
futures = "0.3"
http = "1"
http-body = "1"
hyper = "1"
jsonwebtoken = "9"
moka = { version = "0.12", features = ["future"] }
mockito = { version = "1.6.0", optional = true }
mock_server = { path = "../mock_server", optional = true }
rand = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json"] }
rsa = { version = "0.8", optional = true }
serde = { version = "1" }
serde_json = { version = "1", optional = true }
spicedb = { path = "../spicedb" }
sqlx = { workspace = true }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tracing = "0.1"
tokio = "1"
tonic = "0.14"
tower = "0.5"
