[package]
name = "derive_factory"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0"
chrono = "0.4"
sqlx = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros"] }
tokio-test = "0.4"
trybuild = { version = "1.0", features = ["diff"] }
database = { path = "../database" }

[dependencies]
database-core = { path = "../database-core" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
