[package]
name = "derive_repository"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
database-core = { path = "../database-core" }
heck = "0.5"
pluralizer = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
thiserror = "2.0"

[dev-dependencies]
database = { path = "../database" }
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
uuid = { version = "1.0", features = ["v4"] }
