[package]
name = "derive_factory"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tokio-test = "0.4"
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
