[package]
name = "frn-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
auth = { path = "../auth", features = ["mock"] }
base64 = "0.22"
chrono = "0.4"
database = { path = "../database" }
fabrique = { workspace = true }
fake = { workspace = true }
frn-derive = { path = "../frn-derive" }
futures = "0.3"
hoop = { path = "../hoop" }
http = "1.3"
hypervisor = { path = "../hypervisor" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
moka = { version = "0.12", features = ["future"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
slug = "0.1"
sqlx = { workspace = true }
spicedb = { path = "../spicedb" }
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tracing = "0.1"
url = "2"
uuid = "1"
