[package]
name = "frn-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
frn-core = { path = "../frn-core" }
prost = "0.14"
prost-types = "0.14"
sqlx = { version = "0.8", features = ["postgres"] }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
