[package]
name = "frn-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
frn-core = { path = "../frn-core" }
hypervisor = { path = "../hypervisor" }
http = "1"
prost = "0.14"
prost-types = "0.14"
sqlx = { version = "0.8", features = ["postgres"] }
thiserror = "2"
tonic = "0.14"
tonic-prost = "0.14"
uuid = "1"

[build-dependencies]
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
