[package]
name = "hypervisor"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
prost = "0.13"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
