[package]
name = "hypervisor"
version = "0.1.0"
edition = "2024"

[features]
mock = ["dep:mockito", "dep:mock_server"]

[dependencies]
mockito = { version = "1.6.0", optional = true }
mock_server = { path = "../mock_server", optional = true }
regex = "1.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.12" }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-retry = "0.3"
tracing = "0.1"
url = "2.0"
uuid = { version = "1", features = ["serde", "v4"] }
