[package]
name = "hypervisor_connector_proxmox"
version = "0.1.0"
edition = "2024"

[features]
mock = ["mockito"]
[dependencies.mockito]
version = "1.6.0"
optional = true

[dependencies]
hypervisor_connector = { path = "../hypervisor_connector" }
regex = "1.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12" }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-retry = "0.3"
tracing = "0.1"
url = "2.0"

[dev-dependencies]
mockito = "1.6.0"
