[package]
name = "hypervisor_connector_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
hypervisors = { path = "../hypervisors" }
hypervisor_connector = { path = "../hypervisor_connector" }
hypervisor_connector_proxmox = { path = "../hypervisor_connector_proxmox" }
reqwest = { version = "0.12", features = ["json"] }
