[package]
name = "hypervisors"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
frn-core = { path = "../frn-core" }
infrastructure = { path = "../infrastructure" }
prost = "0.14"
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
