[package]
name = "iam"
version = "0.1.0"
edition = "2024"
description = "Identity and Access Management for gRPC services"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# HTTP clients and utilities
reqwest = { version = "0.12", features = ["json"] }
http = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = "0.12"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# JWT handling
jsonwebtoken = "9.3"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variable handling
dotenvy = "0.15"

# Service discovery
tower = "0.4"
tower-layer = "0.3"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tonic-web = "0.12"
prost = "0.12"
tonic-build = "0.12"

[build-dependencies]
tonic-build = "0.12"

[features]
build-examples = []

[[example]]
name = "basic_auth"
path = "examples/basic_auth.rs"

[[example]]
name = "custom_provider"
path = "examples/custom_provider.rs"