[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
derive_factory = { path = "../derive_factory" }
derive_repository = { path = "../derive_repository" }
prost = "0.13"
prost-types = "0.13"
resources = { path = "../resources" }
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2"
tonic = "0.12"
uuid = "1"

[build-dependencies]
tonic-build = "0.12"
