[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
prost = "0.14"
prost-types = "0.14"
resources = { path = "../resources" }
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2"
tonic = "0.14"
tonic-prost = "0.14"
uuid = "1"

[build-dependencies]
tonic-prost-build = "0.14"
