[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
database = { path = "../database" }
fabrique = { workspace = true }
frn-core = { path = "../frn-core" }
prost = "0.14"
prost-types = "0.14"
sqlx = { workspace = true, features = ["migrate"] }
thiserror = "2"
tonic = "0.14"
tonic-prost = "0.14"
uuid = "1"

[build-dependencies]
tonic-prost-build = "0.14"
