[package]
name = "instances"
version = "0.1.0"
edition = "2024"

[dependencies]
hypervisors = { path = "../hypervisors" }
hypervisor_connector = { path = "../hypervisor_connector" }
hypervisor_connector_proxmox = { path = "../hypervisor_connector_proxmox" }
hypervisor_connector_resolver = { path = "../hypervisor_connector_resolver" }
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

