[package]
name = "instances"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
database = { path = "../database" }
futures = "0.3"
hypervisors = { path = "../hypervisors" }
hypervisor_connector = { path = "../hypervisor_connector" }
hypervisor_connector_proxmox = { path = "../hypervisor_connector_proxmox" }
hypervisor_connector_resolver = { path = "../hypervisor_connector_resolver" }
infrastructure = { path = "../infrastructure" }
mock_server = { path = "../mock_server" }
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.12", features = ["json"] }
resources = { path = "../resources" }
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
