[package]
name = "operation-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
frn-core = { path = "../frn-core" }
serde_json = { workspace = true }
spicedb = { path = "../spicedb" }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
