[package]
name = "operations-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
frn-core = { path = "../frn-core" }
hoop = { path = "../hoop" }
pangolin = { path = "../pangolin" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
spicedb = { path = "../spicedb" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
