[package]
name = "pangolin"
version = "0.1.0"
edition = "2024"
description = "Client for Pangolin API - Zero Trust VPN user management"

[features]
mock = ["dep:mockito", "dep:mock_server"]

[dependencies]
mockito = { version = "1.6.0", optional = true }
mock_server = { path = "../mock_server", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
