[package]
name = "pangolin"
version = "0.1.0"
edition = "2024"
description = "Client for Pangolin API - Zero Trust VPN user management"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

[dev-dependencies]
# For integration tests against real Pangolin instance
tokio-test = "0.4"
