[package]
name = "resources"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
derive_factory = { path = "../derive_factory" }
derive_repository = { path = "../derive_repository" }
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
