[package]
name = "resources"
version = "0.1.0"
edition = "2024"

[features]
mock = ["auth/mock"]

[dependencies]
auth = { path = "../auth" }
database = { path = "../database" }
derive_factory = { path = "../derive_factory" }
derive_repository = { path = "../derive_repository" }
mock_server = { path = "../mock_server" }
prost = "0.14"
prost-types = "0.14"
reqwest = "0.12"
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
