[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.6"
hypervisors = { path = "../hypervisors" }
instances = { path = "../instances" }
migration = { path = "../migration" }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12"
tonic-web = "0.12"
tower-http = { version = "0.6", features = ["cors"] }
tower-layer = "0.3"

[dev-dependencies]
hypervisor_connector_proxmox = { path = "../hypervisor_connector_proxmox", features = ["mock"] }

