[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.6"
hypervisors = { path = "../hypervisors" }
infrastructure = { path = "../infrastructure" }
instances = { path = "../instances" }
prost = "0.13"
prost-types = "0.13"
resources = { path = "../resources" }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = [
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12"
tonic-health = "0.12"
tonic-web = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-layer = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
database = { path = "../database" }
hypervisor_connector_proxmox = { path = "../hypervisor_connector_proxmox", features = [
  "mock",
] }
