[package]
name = "spicedb"
version = "0.1.0"
edition = "2024"

[features]
default = ["mock"]
mock = ["dep:futures", "dep:tokio-stream"]


[dependencies]
futures = { version = "0.3", optional = true }
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1" }
tokio-stream = { version = "0.1", optional = true }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
