[package]
name = "synchronizer"
version = "0.1.0"
edition = "2024"

[dependencies]
hypervisors = { path = "../hypervisors" }
instances = { path = "../instances" }
reqwest = "0.12"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
