[package]
name = "synchronizer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
hypervisor = { path = "../hypervisor" }
frn-core = { path = "../frn-core" }
futures = "0.3"
reqwest = "0.12"
sqlx = { workspace = true }
thiserror = "2"
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
